--- a/taller2/package.json
+++ b/taller2/package.json
@@ -12,9 +12,11 @@
   "dependencies": {
     "bootstrap": "^5.3.8",
     "primereact": "^10.9.7",
+    "quill": "^2.0.3",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-router": "^7.9.6",
+    "react-router-dom": "^7.9.6",
     "sass": "^1.94.1",
     "vite-plugin-sass": "^0.1.0"
   },
